		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


R 2.3.0
=======

There is a new function choose.dir() to choose a folder (as used for
'Change dir...' on the File menu in RGui.)

There is now MBCS support for the line editor in Rterm.exe.
(Contributed by Haruki Koyanagi.)

Import libraries are now made without -k (--kill-at).  This is not
relevant for base R (R.dll, Rblas.dll and Rlapack.dll only use cdecl
entry points) but might be for contributed software using R's macros.

The import libraries libR.a, libRblas.a and libproxy.a are now
installed in R_HOME/lib (rather than R_HOME/src/gnuwin32).



R 2.2.0 patched
===============

Using the latest binutils allows us to distribute RGui.exe and Rterm.exe
as large-address-aware (see the rw-FAQ Q2.9).

The maximum C stack size for RGui.exe and Rterm.exe has been increased
to 10Mb (from 2Mb); this is comparable with the default on Linux systems
and may allow some larger programs to run without crashes.

Overwrite mode in the console now works for MBCS charsets.  (Patch
contributed by Haruki Koyanagi.)

R CMD REMOVE in 2.2.0 removed the package(s) but failed to remake the
indices.

The windows() family of devices did not find the right character width
in MBCS locales for non-ASCII characters.  (Pointed out by Ei-ji
Nakama.)

The installer was missing doc/html/index.html.



R 2.2.0
=======

The installer will be called R-2.2.0-win32.exe and by default install
into (the local equivalent of) C:/Program Files/R/R-2.2.0.  The
'rw2010' notation has been dropped.

file:// URLs are now interpreted by download.file(), download.packages() 
and url() in the same way as Mozilla-based browsers.  That is, the
expected form is

	file:///d:/path/to/file

with *three* slashes.

The (D)COM support has been updated, and header files and an import 
library (src/gnuwin32/librproxy.a) are now installed.  See the rcom
package for usage.
